--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
     <div class="red-overlay"></div>
   </div>
   <div class="message" id="message">YOU HAVE BEEN HACKED!</div>
-  <audio id="jumpscare-sound" src="https://www.soundjay.com/button/beep-07.wav"></audio> <!-- Using a public sample for testing -->
+  <audio id="jumpscare-sound" src="https://www.soundjay.com/human/sounds/woman-scream-01.mp3"></audio> <!-- Using a public sample for testing -->
   <script>
     const canvas = document.getElementById('matrix');
     const ctx = canvas.getContext('2d');
